security/cmd/chiron/test-data/example-validating-webhook-config.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  labels:
    app: protovalidateWebhook
  name: protovalidate
webhooks:
- clientConfig:
    caBundle: ""
    service:
      name: protovalidate
      namespace: istio-system
      path: /validate
  failurePolicy: Fail
  name: protovalidate.istio.io
  namespaceSelector:
    matchLabels:
      protovalidate-validation: enabled
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    resources:
    - pods
  sideEffects: Unknown
